messeg sent and getting succssfully working

--- a/src/app/viewer/viewer.component.html
+++ b/src/app/viewer/viewer.component.html
@@ -1,4 +1,3 @@
-<!-- viewer.component.html -->
-<div>
-  <canvas #viewerCanvas width="800" height="600"></canvas>
-</div>
+<app-viewer *ngIf="viewerCanvas" [viewerCanvas]="viewerCanvas"></app-viewer>
+<canvas #viewerCanvas width="800" height="600"></canvas>
+
