--- a/src/app/viewer/viewer.component.html
+++ b/src/app/viewer/viewer.component.html
@@ -1,3 +1,9 @@
-<app-viewer *ngIf="viewerCanvas" [viewerCanvas]="viewerCanvas"></app-viewer>
-<canvas #viewerCanvas width="800" height="600"></canvas>
-
+<div class="canvas-container">
+  <h2>Viewe Here</h2>
+  <canvas
+    #viewerCanvas
+    width="800"
+    height="600"
+    style="border: 1px solid #0c0c0c; background-color: aquamarine"
+  ></canvas>
+</div>
