--- a/src/app/drawing/drawing.component.css
+++ b/src/app/drawing/drawing.component.css
@@ -1,11 +1,15 @@
-.drawing-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-  }
-  
-  canvas {
-    border: 2px solid #000;
-  }
-  
+/* viewer.component.css */
+
+.canvas-container {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh; /* Makes the container full-height of the viewport */
+}
+
+h2 {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
