all Comments added

--- a/src/app/viewer/viewer.component.html
+++ b/src/app/viewer/viewer.component.html
@@ -1,9 +1,10 @@
 <div class="canvas-container">
-  <h2>Viewe Here</h2>
-  <canvas
-    #viewerCanvas
-    width="800"
-    height="600"
-    style="border: 1px solid #0c0c0c; background-color: aquamarine"
-  ></canvas>
-</div>
+    <h2>Viewer Here</h2>
+    <canvas
+      #viewerCanvas
+      width="800"
+      height="600"
+      style="border: 1px solid #0c0c0c; background-color: aquamarine"
+    ></canvas>
+  </div>
+  
